--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
 
   <footer>
     <p>Follow me: 
-      <a href="#">Instagram</a> | 
-      <a href="#">YouTube</a> | 
-      <a href="#">Spotify</a>
+      <a href="https://www.instagram.com/iqeljaayhq">Instagram</a> | 
+      <a href="https://www.youtube.com/youngzve">YouTube</a> | 
+      <a href="https://open.spotify.com/artist/3adcKLb8DD5DCKHlVNJ0qb">Spotify</a>
     </p>
-    <p>Contact: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    <p>Contact: <a href="mailto:iQ@infQuality.com">iQ@infQuality.com</a></p>
     <p>&copy; 2025 Infinite Quality. All Rights Reserved.</p>
   </footer>
 </body>
